--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,34 @@
 {
     "name": "laravel/lumen",
     "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "keywords": [
+        "framework",
+        "laravel",
+        "lumen"
+    ],
     "license": "MIT",
     "type": "project",
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "http://git2.jvsonline.fr:89/"
+        }
+    ],
+    "scripts": {
+        "build": "composer install --no-dev --optimize-autoloader",
+        "lint": "phpcs -p --standard=PSR2 --ignore=vendor,coverage .",
+        "lint:fix": "phpcbf -p --standard=PSR2 --ignore=vendor,coverage .",
+        "test": "phpunit",
+        "test:debug": "php -d xdebug.remote_autostart=on ./vendor/phpunit/phpunit/phpunit",
+        "test:coverage": "phpunit --coverage-html ./coverage",
+        "start": "php -S localhost:8000 -t public",
+        "start:debug": "php -d xdebug.remote_autostart=on -S localhost:8000 -t public",
+        "doc": "php artisan api:documentation --file documentation",
+        "html": "aglio -i documentation.md -o documentation.html"
+    },
     "require": {
-        "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
-        "laravel/lumen-framework": "^8.0"
+        "jvs/framework": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -24,20 +45,16 @@
         }
     },
     "autoload-dev": {
-        "classmap": [
-            "tests/"
-        ]
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
     },
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "secure-http": false
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "scripts": {
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ]
-    }
+    "prefer-stable": true
 }
